# Reversi

./: README.md
app/: CMakeLists.txt  Makefile  README.md
app/source/: Controller.cpp  Controller.hpp  Gamestate.cpp  Gamestate.hpp  Gui.cpp  Gui.hpp  Move.hpp  Playboard.cpp  Playboard.hpp  PlayerColor.hpp  main.cpp
documentation/planning/: Reversi.mdzip  StakerholderNeeds.md  SystemRequirements.md  Traceability-table.md  UseCaseReport.md
